下载，动态菜单，虚拟进度条，分页，常用方法，动态图标

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
   ],
   "compilerOptions": {
     // ...
-    "types": ["element-plus/global", "vite-plugin-vue-layouts/client"]
+    "types": ["element-plus/global", "vite-plugin-vue-layouts/client", "vite-plugin-pages/client", "vite/client"]
   },
   "includes":[
   	"src/**/*.d.ts",
