--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
+    "nprogress": "^0.2.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "~5.2.0",
