--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.6.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "element-plus": "^2.4.2",
     "js-cookie": "^3.0.5",
