--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,19 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.vitest.json"
+        }
+    ],
+    "compilerOptions": {
+        // ...
+        "types": ["element-plus/global", "vite-plugin-vue-layouts/client", "vite-plugin-pages/client", "vite/client"]
     },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ],
-  "compilerOptions": {
-    // ...
-    "types": ["element-plus/global", "vite-plugin-vue-layouts/client", "vite-plugin-pages/client", "vite/client"]
-  },
-  "includes":[
-  	"src/**/*.d.ts",
-  	"./*.d.ts"
-  ]
+    "includes": ["src/**/*.d.ts", "./*.d.ts"]
 }
