--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,6 @@
 NODE_ENV = development
 
-
 VITE_APP_TITLE = '项目模板'
-VITE_BASE_API='/dev-api'
+VITE_BASE_API='/base-api'
 VITE_DYNAMIC_ROUTE_ON = true
-VITE_PROXY_TARGET_URL = "http://127.0.0.1"
+VITE_PROXY_TARGET_URL = "http://172.160.10.105:9999"
