--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@ NODE_ENV = development
 VITE_APP_TITLE = 'vue3快速开发模板'
 VITE_BASE_API='/base-api'
 VITE_DYNAMIC_ROUTE_ON = true
-VITE_PROXY_TARGET_URL = "http://172.160.10.101:9999"
+VITE_PROXY_TARGET_URL = "http://localhost:9999"
