--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "format": "prettier --write src/"
     },
     "dependencies": {
+        "@iconify-json/mdi": "^1.1.64",
         "@iconify-json/ri": "^1.1.18",
         "@vueuse/core": "^10.6.1",
         "animate.css": "^4.1.1",
@@ -27,7 +28,7 @@
         "vue-router": "^4.2.5"
     },
     "devDependencies": {
-        "@iconify-json/ph": "^1.1.6",
+        "@iconify-json/ph": "^1.1.11",
         "@rushstack/eslint-patch": "^1.3.3",
         "@tsconfig/node18": "^18.2.2",
         "@types/jsdom": "^21.1.3",
