--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "vue3-template",
     "version": "0.0.0",
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "vite",
