--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "run-p type-check \"build-only {@}\" --",
+        "build": "vite build",
         "preview": "vite preview",
         "test:unit": "vitest",
-        "build-only": "vite build",
         "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/"
@@ -32,6 +31,7 @@
         "@types/jsdom": "^21.1.3",
         "@types/node": "^18.18.5",
         "@unocss/preset-icons": "^0.57.7",
+        "@vitejs/plugin-legacy": "^4.1.1",
         "@vitejs/plugin-vue": "^4.4.0",
         "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/eslint-config-prettier": "^8.0.0",
